# DeepSpeedBenchmarks

./: CMakeLists.txt  LICENSE  README.md
cutlass/: gemm_example.cu
gemm/: README.md  custom_gemm.cu  cutlass_gemm.cu
gemm/custom_gemm/: CMakeLists.txt  custom_gemm.cu
gemm/custom_gemm_fp16_int8/: CMakeLists.txt  context.h  custom_gemm.cu
gemm/cutlass/: CMakeLists.txt  gemm.cu  gemm_bias_gelu.cu  helper.h  splitk_gemm.cu  volta_tensorop_gemm.cu
libtorch_test/: CMakeLists.txt  REAME.md
